--- a/yashwebsite/index.html
+++ b/yashwebsite/index.html
@@ -13,7 +13,8 @@
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- css link  -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/yashwebsite/css/responsive.css">
+  <link rel="stylesheet" href="/yashwebsite/css/style.css">
 </head>
 <body>
   <!-- section one started -->
@@ -362,19 +363,14 @@
               <img src="/yashwebsite/images/teacher.svg" class="svg-image-logo me-3" alt="">
               <h5>Expert Instructors</h5>
             </div>
-
-
-
-             <p class="ps-5 ms-3 text-secondary">      Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim</p>
+             <p class="ps-5 ms-3 text-secondary">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim</p>
           </div>
           <div class="container">
             <div class="d-flex ">
               <img src="/yashwebsite/images/24-hours.svg" class="svg-image-logo me-3" alt="">
               <h5>Dedicated Support</h5>
             </div>
-
-
-             <p class="ps-5 ms-3 text-secondary">      Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim</p>
+             <p class="ps-5 ms-3 text-secondary">Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim</p>
           </div>
         </div>
       </div>
@@ -424,47 +420,26 @@
   <div class="footer mt-5">
 <div class="row pt-5">
   <div class="container-fluid d-flex ">
-    <div class="col-3  d-flex ">
-<div class="container ">
-<img src="/yashwebsite/images/logo-2.png" class="img-fluid" alt="">
-<p>
-We are providing high-quality online courses for about ten years. Our all instructors expert and highly experienced.
-</p>
-<h6>Follow Us</h6>
-<i class="fa-brands fa-facebook"></i><i class="fa-brands fa-square-twitter"></i><i class="fa-brands fa-square-instagram"></i><i class="fa-brands fa-square-instagram"></i>
-</div>
-    </div>
-    <div class="col-3 ">
-<div class="container d-flex justify-content-center align-items-center">
-<ul>
-  <h5 class="pt-5 pb-3">CATEGORIES</h5 >
-  <li style="list-style: none;"><a href="" style="text-decoration: none; font-weight: 500;" class="text-white"><i class="fa fa-angle-right pe-1"></i>Business</a></li>
-  <li style="list-style: none;"><a href="" style="text-decoration: none; font-weight: 500;" class="text-white"><i class="fa fa-angle-right pe-1"></i>Design</a></li>
-  <li style="list-style: none;"><a href="" style="text-decoration: none; font-weight: 500;" class="text-white"><i class="fa fa-angle-right pe-1"></i>Development</a></li>
-  <li style="list-style: none;"><a href="" style="text-decoration: none; font-weight: 500;" class="text-white"><i class="fa fa-angle-right pe-1"></i>Marketing</a></li>
-  <li style="list-style: none;"><a href="" style="text-decoration: none; font-weight: 500;" class="text-white"><i class="fa fa-angle-right pe-1"></i>Photography</a></li>
-</ul>
-</div>
-    </div>
-    <div class="col-3 ">
-      <div class="container">
-        <h5 class="pt-5 pb-3">Recents posts</h5 >
+ 
+    <div class="col-6 ">
+      <div class="container justify-content-around al">
+        <h5 class="pt-5 pb-3 fs-1">Recents posts</h5 >
         <div class="d-flex ">
           <img src="/yashwebsite/images/client-1.jpg" class=" footer-imgs m-2 me-3" alt="">
-          <p>Learn Webs Applications Development from Experts
+          <p class="fs-3">Learn Webs Applications Development from Experts
             April 1, 2022</p>
         </div>
         <div class="d-flex">
           <img src="/yashwebsite/images/course-10.jpg"  class=" footer-imgs m-2 me-3" alt="">
-          <p>Learn Webs Applications Development from Experts
+          <p class="fs-3">Learn Webs Applications Development from Experts
             April 1, 2022</p>
         </div>
       </div>
 
     </div>
-    <div class="col-3  flex-column  justify-content-around align-items-center">
+    <div class="col-6   ">
       <h5 class="pt-5 pb-3">Contact us</h5 >
-      <p>250/A Oval Street, Mount View, London, United Kingdom
+      <p class="fs-3">250/A Oval Street, Mount View, London, United Kingdom
         <br>
         <br>
 
