--- a/index.html
+++ b/index.html
@@ -359,6 +359,36 @@
     </section>
     <!--Section-6 End-->
 
+    <!--Section-7 Start-->
+    <section class="properties">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="propertiesHead-wrapper text-center">
+                        <div class="about mb-3 px-3 py-1">Properties</div>
+                        <div class="properties-head h1">Featured Listings</div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="test d-flex justify-content-evenly">
+
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="test">
+
+                </div>
+                <div class="col-md-3">
+                    
+                </div>
+                <div class="col-md-3">
+                                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Section-7 end-->
+
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
