--- a/project-2/index.html
+++ b/project-2/index.html
@@ -102,9 +102,9 @@
                 </div>
 
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 sm-12">
                 <div class="mockup">
-                    <img src="img/mockup-phone.png" alt="mockup-phone">
+                    <img src="img/mockup-phone.png"  alt="mockup-phone">
                 </div>
             </div>
         </div>
