--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
     <!--Section-7 Start-->
     <section class="properties">
-        <div class="container-fluid">
+        <div class="container-fluid px-5 my-5">
             <div class="row">
                 <div class="col-12">
                     <div class="propertiesHead-wrapper text-center">
@@ -369,22 +369,60 @@
                         <div class="properties-head h1">Featured Listings</div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="test d-flex justify-content-evenly">
-
+                <div class="col-md-3 d-flex justify-content-evenly">
+                    <div class="featured-wrap shadow">
+                        <div class="inner-img">
+                            <img src="images/feature-01.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="featured-head p-4">
+                            <div class="color-orange">
+                                $34,900/month
+                            </div>
+                            <div class="h4">New Apartment Nice View</div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="test">
-
+                <div class="col-md-3 d-flex justify-content-evenly">
+                    <div class="featured-wrap shadow">
+                        <div class="inner-img">
+                            <img src="images/feature-02.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="featured-head p-4">
+                            <div class="color-orange">
+                                $34,900/month
+                            </div>
+                            <div class="h4">Modern Apartments</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    
+                <div class="col-md-3 d-flex justify-content-evenly">
+                    <div class="featured-wrap shadow">
+                        <div class="inner-img">
+                            <img src="images/feature-03.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="featured-head p-4">
+                            <div class="color-orange">
+                                $34,900/month
+                            </div>
+                            <div class="h4">Comfortable Apartments</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                                        </div>
+                <div class="col-md-3 d-flex justify-content-evenly">
+                    <div class="featured-wrap shadow">
+                        <div class="inner-img">
+                            <img src="images/feature-04.jpg" alt="" class="img-fluid">
+                        </div>
+                        <div class="featured-head p-4">
+                            <div class="color-orange">
+                                $34,900/month
+                            </div>
+                            <div class="h4">Luxury villa in Rego Park</div>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <!--Section-7 end-->
