--- a/index.html
+++ b/index.html
@@ -373,6 +373,11 @@
                     <div class="featured-wrap shadow">
                         <div class="inner-img">
                             <img src="images/feature-01.jpg" alt="" class="img-fluid">
+                            <div class="img-text bg-green text-white">For Rent</div>
+                            <div class="img-bottom text-white d-flex justify-content-between px-4">
+                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago </div>
+                                <div class="img-bt-2 ps-0"> <i class="fa-solid fa-camera px-2"></i>4 </div>
+                            </div>
                         </div>
                         <div class="featured-head p-4">
                             <div class="color-orange">
@@ -386,6 +391,11 @@
                     <div class="featured-wrap shadow">
                         <div class="inner-img">
                             <img src="images/feature-02.jpg" alt="" class="img-fluid">
+                            <div class="img-text bg-orange text-white">For Sale</div>
+                            <div class="img-bottom text-white d-flex justify-content-between px-4">
+                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago </div>
+                                <div class="img-bt-2 ps-0"> <i class="fa-solid fa-camera px-2"></i>4 </div>
+                            </div>
                         </div>
                         <div class="featured-head p-4">
                             <div class="color-orange">
@@ -399,6 +409,11 @@
                     <div class="featured-wrap shadow">
                         <div class="inner-img">
                             <img src="images/feature-03.jpg" alt="" class="img-fluid">
+                            <div class="img-text bg-green text-white">For Rent</div>
+                            <div class="img-bottom text-white d-flex justify-content-between px-4">
+                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago </div>
+                                <div class="img-bt-2 ps-0"> <i class="fa-solid fa-camera px-2"></i>4 </div>
+                            </div>
                         </div>
                         <div class="featured-head p-4">
                             <div class="color-orange">
@@ -412,6 +427,11 @@
                     <div class="featured-wrap shadow">
                         <div class="inner-img">
                             <img src="images/feature-04.jpg" alt="" class="img-fluid">
+                            <div class="img-text bg-green text-white">For Rent</div>
+                            <div class="img-bottom text-white d-flex justify-content-between px-4">
+                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago </div>
+                                <div class="img-bt-2 ps-0"> <i class="fa-solid fa-camera px-2"></i>4 </div>
+                            </div>
                         </div>
                         <div class="featured-head p-4">
                             <div class="color-orange">
