--- a/website-2/index.html
+++ b/website-2/index.html
@@ -6,15 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohit</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <link rel="stylesheet" href="/website-2/css/main.css">
+    <link rel="stylesheet" href="/website-2/css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,700;0,800;1,300;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -137,7 +141,8 @@
                     <nav class="navbar-se ">
                         <div class="container">
                             <form class="d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Type here" aria-label="Search">
+                                <input class="form-control me-2" type="search" placeholder="Type here"
+                                    aria-label="Search">
                                 <button class="search-btn btn-outline-success" type="search-btn">
                                     <!-- <i class="fa-regular fa-magnifying-glass"></i> -->
                                     Search
@@ -236,8 +241,7 @@
                     <div class="row card-img">
                         <div class="col-3">
                             <div class="card" style="width: 15rem;">
-                                <img src="/website-2/image/destination1.png" class="card-img-top"
-                                    alt="...">
+                                <img src="/website-2/image/destination1.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <span>Jan 27 - Jan 31, 4 people</span>
                                     <p>Starting from <span>$1000</span></p>
@@ -246,8 +250,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card" style="width: 15rem;">
-                                <img src="/website-2/image/destination2.png" class="card-img-top"
-                                    alt="...">
+                                <img src="/website-2/image/destination2.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <span>Jan 27 - Jan 31, 3 people</span>
                                     <p>Starting from <span>$1200</span></p>
@@ -256,8 +259,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card" style="width: 15rem;">
-                                <img src="/website-2/image/destination3.png" class="card-img-top"
-                                    alt="...">
+                                <img src="/website-2/image/destination3.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <span>Jan 27 - Jan 31, 4 people</span>
                                     <p>Starting from <span>$1400</span></p>
@@ -266,8 +268,7 @@
                         </div>
                         <div class="col-3">
                             <div class="card" style="width: 15rem;">
-                                <img src="/website-2/image/destination4.png" class="card-img-top"
-                                    alt="...">
+                                <img src="/website-2/image/destination4.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <span>Jan 27 - Jan 31, 5 people</span>
                                     <p>Starting from <span>$1600</span></p>
@@ -347,32 +348,28 @@
                     <div class="row">
                         <div class="col-3">
                             <div class="card1" style="width: 18rem;">
-                                <img src="/website-2/image/property-img1.png" class="card-img-top"
-                                    alt="...">
+                                <img src="/website-2/image/property-img1.png" class="card-img-top" alt="...">
                                 <h3>Hotels</h3>
                                 <span>15,935 properties</span>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="card2" style="width: 18rem;">
-                                <img src="/website-2/image/property-img2.png" class="card-img-top"
-                                    alt="...">
+                                <img src="/website-2/image/property-img2.png" class="card-img-top" alt="...">
                                 <h3>Hotels</h3>
                                 <span>15,935 properties</span>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="card1" style="width: 18rem;">
-                                <img src="/website-2/image/property-img3.png" class="card-img-top"
-                                    alt="...">
+                                <img src="/website-2/image/property-img3.png" class="card-img-top" alt="...">
                                 <h3>Cottages</h3>
                                 <span>7,531 properties</span>
                             </div>
                         </div>
                         <div class="col-3">
                             <div class="card1" style="width: 18rem;">
-                                <img src="/website-2/image/property-img4.png" class="card-img-top"
-                                    alt="...">
+                                <img src="/website-2/image/property-img4.png" class="card-img-top" alt="...">
                                 <h3>Resorts</h3>
                                 <span>6,431 properties</span>
                             </div>
@@ -392,14 +389,14 @@
             </div>
             <div class="row book-content-img">
                 <!-- <div class="col-6 "> -->
-                    <!-- <div class="book-img"> -->
-                        <!-- <div class="row"> -->
-                            <div class="col-6">
-                                <img src="/website-2/image/hotel1.jpg" class="img-fluid" alt="">
-                                <h3>The zero-star hotel</h3>
-                            </div>
-                        <!-- </div> -->
-                    <!-- </div> -->
+                <!-- <div class="book-img"> -->
+                <!-- <div class="row"> -->
+                <div class="col-6">
+                    <img src="/website-2/image/hotel1.jpg" class="img-fluid" alt="">
+                    <h3>The zero-star hotel</h3>
+                </div>
+                <!-- </div> -->
+                <!-- </div> -->
                 <!-- </div> -->
                 <div class="col-6">
                     <div class="row book-content-img1">
@@ -579,8 +576,7 @@
             <div class="row">
                 <div class="col-4">
                     <a class="navbar-brand" href="#">
-                        <img src="/website-2/image/logo-footer.png" alt="Elad" width="70"
-                            height="35">
+                        <img src="/website-2/image/logo-footer.png" alt="Elad" width="70" height="35">
                     </a>
                     <p>Lorem Ipsum is simply dummy text of the printing and type setting at industry. Lorem Ipsum
                         has
