--- a/css/index.html
+++ b/css/index.html
@@ -251,6 +251,7 @@
 
     </section>
     <!-- end of cards -->
+    <!-- second page -->
     <section class="section5">
       <div class="container bg-light   py-5 ">
         <div class="row">
@@ -289,6 +290,9 @@
         </div>
       </div>
     </section>
+     <!-- second page end -->
+   
+     <!-- third page start -->
     <section class="section6 bg-info">
       <div class="container mt-3 py-5 ">
         <div class="row">
@@ -299,7 +303,8 @@
         </div>
       </div>
     </section>
-    <section class="section">
+   <!-- ** -->
+    <section class="section6.1">
       <div class="container mt-2 py-2 bg-light">
         <div class="row">
 
@@ -318,6 +323,8 @@
         </div>
       </div>
     </section>
+    <!-- -- third page end  --> 
+     <!-- four page start -->
     <section class="section7 bg-info">
       <div class="container text-center py-5">
         <div class="row">
@@ -328,6 +335,8 @@
         </div>
       </div>
     </section>
+    <!-- four page end -->
+     <!-- fifth page start -->
     <section class="section8">
       <div class="container justify-content-md-center p-4 h-800 bg-gradient mt-5">
         <div class="row">
@@ -360,6 +369,8 @@
         </div>
       </div>
     </section>
+      
+      
     <section class="section9">
       <div class="container justify-content-md-center p-4 h-800 bg-gradient mt-5">
         <div class="row">
@@ -395,7 +406,9 @@
 
 
     </section>
-    <section class="section910">
+    <!-- fifth page end-->
+  <!-- last page start-->
+    <section class="section10">
       <div class="container py-4 ">
         <div class="row">
           <div class="col-4 px-3">
@@ -409,6 +422,7 @@
           </div>
         </div>
     </section>
+    <!-- footer page start -->
     <section class="section11">
       <div class="container-fuild  my-4">
         <!-- Footer -->
@@ -514,7 +528,8 @@
       </div>
       <!-- End of .container -->
     </section>
-
+    <!-- footet page end -->
+<!-- last page end-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </body>
