--- a/yashwebsite/index.html
+++ b/yashwebsite/index.html
@@ -156,16 +156,16 @@
     </div>
   </div>
   <!-- courses explore section star  -->
-  <div class="container-fluid courses-explore pt-5 pb-3 mt-5 mb-3">
-    <div class="row">
+  <div class="container-fluid  courses-explore pt-5 pb-3 mt-5 mb-3">
+    <div class="row ">
       <h4 class=".popular-categories-text-1 text-center">COURSES</h4>
       <h3 class=".popular-categories-text-2 text-center"> Explore Popular Courses</h3>
     </div>
-    <div class="row  m-0">
-      <div class="col-12 m-0">
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="card h-100 m-0">
-            <img src="/yashwebsite/images/course-3.jpg" class="card-img-top img-fluid" alt="...">
+    <div class="row  mt-5 pt-5">
+      <div class="col-12 m-0 ">
+        <div class="row row-cols-1 row-cols-md-3 g-4 d-flex justify-content-around">
+          <div class="card h-100 m-0 d-flex justify-content-around">
+            <img src="/yashwebsite/images/course-3.jpg" class="card-img-top " alt="...">
             <div class="card-body">
               <h5 class="card-title card-text-2-num">$15.00</h5>
               <p class="card-text card-text-2">Nutrition: Build Your Perfect Diet & Meal Plan.</p>
@@ -176,7 +176,7 @@
             </div>
           </div>
           <div class="card h-100 m-0">
-            <img src="/yashwebsite/images/course-4.jpg" class="card-img-top img-fluid" alt="...">
+            <img src="/yashwebsite/images/course-4.jpg" class="card-img-top " alt="...">
             <div class="card-body">
               <h5 class="card-title card-text-2-num">$29.00</h5>
               <p class="card-text card-text-2">WordPress Master Class for Beginners</p>
@@ -187,7 +187,7 @@
             </div>
           </div>
           <div class="card h-100 m-0">
-            <img src="/yashwebsite/images/course-5.jpg" class="card-img-top img-fluid" alt="...">
+            <img src="/yashwebsite/images/course-5.jpg" class="card-img-top " alt="...">
             <div class="card-body">
               <h5 class="card-title card-text-2-num">Free</h5>
               <p class="card-text card-text-2">The Complete JavaScript Course 2022</p>
@@ -202,7 +202,7 @@
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="card h-100 m-0">
-        <img src="/yashwebsite/images/course-9.jpg" class="card-img-top img-fluid" alt="...">
+        <img src="/yashwebsite/images/course-9.jpg" class="card-img-top " alt="...">
         <div class="card-body">
           <h5 class="card-title card-text-2-num">$19.00</h5>
           <p class="card-text card-text-2">Ultimate Photoshop Training: From Beginner</p>
@@ -213,7 +213,7 @@
       </div>
       <div>
         <div class="card h-100 m-0">
-          <img src="/yashwebsite/images/course-10.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/yashwebsite/images/course-10.jpg" class="card-img-top " alt="...">
           <div class="card-body">
             <h5 class="card-title card-text-2-num">$12.00</h5>
             <p class="card-text card-text-2">User Experience Design Essentials</p>
@@ -225,7 +225,7 @@
       </div>
       <div>
         <div class="card h-100 m-0">
-          <img src="/yashwebsite/images/course-11.jpg" class="card-img-top img-fluid" alt="...">
+          <img src="/yashwebsite/images/course-11.jpg" class="card-img-top " alt="...">
           <div class="card-body">
             <h5 class="card-title card-text-2-num">$17.00</h5>
             <p class="card-text card-text-2">Complete Blender Creator: Learn 3D Modelling</p>
