--- a/javaScript/jsDemoEvent.html
+++ b/javaScript/jsDemoEvent.html
@@ -89,8 +89,36 @@
                 </div>
                 <div class="col-sm-4 mt-3">
                     <p>
-                        isIndian = <strong id="showData">Yes</strong>
+                        isIndian = <strong id="showData"></strong>
                     </p>
+                </div>
+                <!-- category print -->
+                <div class="col-sm-4 mt-3">
+                    <select id="category" class="form-control">
+                        <option name="" value="">Select</option>
+                        <option name="" value="gOil">Gemeni Oil</option>
+                        <option name="" value="sunOil">Sunflower Oil</option>
+                        <option name="" value="soyaOil">Soyabean Oil</option>
+                        <option name="" value="apple">Apple</option>
+                        <option name="" value="mango">Mango</option>
+                        <option name="" value="watermelon">Watermelon</option>
+                    </select>
+                </div>
+                <div class="col-sm-4 mt-3">
+                    <button class="btn btn-warning" onclick="checkCategory()">Print Category</button>
+                    <p>(On select of food item show category in paragraph on button click )</p>
+                </div>
+                <div class="col-sm-4 mt-3">
+                    <p>
+                        Selected Category = <strong id="printCategory"></strong>
+                    </p>
+                </div>
+                <div class="col-sm-4">
+                    <ul>
+                        <li>Oil</li>
+                        <li>Fruits</li>
+                        <li>Vegetables</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -124,6 +152,17 @@
             cN = 'No';
             }
             showData.innerHTML = cN;
+        }
+
+        function checkCategory(){
+            var catg = document.getElementById('category').value;
+            if(catg == 'sunOil' || catg == 'gOil' || catg== 'soyaOil'){
+                printCategory.innerHTML= "Oil";
+            }
+            else{
+                printCategory.innerHTML= "Fruits";
+            }
+            
         }
     </script>
 
