--- a/index.html
+++ b/index.html
@@ -375,7 +375,8 @@
                             <img src="images/feature-01.jpg" alt="" class="img-fluid">
                             <div class="img-text bg-green text-white">For Rent</div>
                             <div class="img-bottom text-white d-flex justify-content-between px-4">
-                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago </div>
+                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago
+                                </div>
                                 <div class="img-bt-2 ps-0"> <i class="fa-solid fa-camera px-2"></i>4 </div>
                             </div>
                         </div>
@@ -393,7 +394,8 @@
                             <img src="images/feature-02.jpg" alt="" class="img-fluid">
                             <div class="img-text bg-orange text-white">For Sale</div>
                             <div class="img-bottom text-white d-flex justify-content-between px-4">
-                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago </div>
+                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago
+                                </div>
                                 <div class="img-bt-2 ps-0"> <i class="fa-solid fa-camera px-2"></i>4 </div>
                             </div>
                         </div>
@@ -411,7 +413,8 @@
                             <img src="images/feature-03.jpg" alt="" class="img-fluid">
                             <div class="img-text bg-green text-white">For Rent</div>
                             <div class="img-bottom text-white d-flex justify-content-between px-4">
-                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago </div>
+                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago
+                                </div>
                                 <div class="img-bt-2 ps-0"> <i class="fa-solid fa-camera px-2"></i>4 </div>
                             </div>
                         </div>
@@ -429,7 +432,8 @@
                             <img src="images/feature-04.jpg" alt="" class="img-fluid">
                             <div class="img-text bg-green text-white">For Rent</div>
                             <div class="img-bottom text-white d-flex justify-content-between px-4">
-                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago </div>
+                                <div class="img-bt-1"> <i class="fa-solid fa-location-dot"></i> Belmont Garden,Chicago
+                                </div>
                                 <div class="img-bt-2 ps-0"> <i class="fa-solid fa-camera px-2"></i>4 </div>
                             </div>
                         </div>
