--- a/javaScript/jsDemoEvent.html
+++ b/javaScript/jsDemoEvent.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Java Script Demo Page</title>
-        <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Java Script Demo Page</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+</head>
+
 <body>
 
     <div class="newSection">
@@ -102,6 +105,9 @@
                         <option name="" value="apple">Apple</option>
                         <option name="" value="mango">Mango</option>
                         <option name="" value="watermelon">Watermelon</option>
+                        <option name="" value="cauliF">Cauliflower</option>
+                        <option name="" value="Cabbage">Cabbage</option>
+                        <option name="" value="carrot">Carrot</option>
                     </select>
                 </div>
                 <div class="col-sm-4 mt-3">
@@ -144,28 +150,32 @@
             var gender = document.querySelector('input[name = gen]:checked').value;
             showGender.innerHTML = gender;
         }
-        function checkNationality(){
-            if(document.getElementById('indian').checked){
-                var cN='Yes';
+        function checkNationality() {
+            if (document.getElementById('indian').checked) {
+                var cN = 'Yes';
             }
-            else{
-            cN = 'No';
+            else {
+                cN = 'No';
             }
             showData.innerHTML = cN;
         }
 
-        function checkCategory(){
+        function checkCategory() {
             var catg = document.getElementById('category').value;
-            if(catg == 'sunOil' || catg == 'gOil' || catg== 'soyaOil'){
-                printCategory.innerHTML= "Oil";
+            if (catg == 'sunOil' || catg == 'gOil' || catg == 'soyaOil') {
+                printCategory.innerHTML = "Oil";
+            }
+            else if (catg == 'apple' || catg == 'mango' || catg == 'watermelon') {
+                printCategory.innerHTML = "Fruits";
             }
             else{
-                printCategory.innerHTML= "Fruits";
+                printCategory.innerHTML = "Vegetables";
             }
-            
+
         }
     </script>
 
 
 </body>
+
 </html>
