--- a/javaScript/jsDemoEvent.html
+++ b/javaScript/jsDemoEvent.html
@@ -55,7 +55,7 @@
                 <div class="col-sm-4 mt-3">
                     <select id="city" class="form-control">
                         <option name="" value="Pune">Pune</option>
-                        <option name="" value="Mumbai">Amumbai</option>
+                        <option name="" value="Mumbai">Mumbai</option>
                         <option name="" value="Nagpur">Nagpur</option>
                     </select>
                 </div>
